[gd_scene load_steps=5 format=3 uid="uid://1kty4inue6nu"]

[ext_resource type="Script" uid="uid://bvy8trgugtv67" path="res://characterBody_P2.gd" id="1_ci73e"]
[ext_resource type="Texture2D" uid="uid://cmue7o4meppar" path="res://Player Sprites/Ship-Nebula - Sprite Sheet.png" id="2_67u87"]

[sub_resource type="Animation" id="Animation_ci73e"]
resource_name = "Idle_p2"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67u87"]
_data = {
&"Idle_p2": SubResource("Animation_ci73e")
}

[node name="CharacterBodyP2" type="CharacterBody2D"]
texture_filter = 1
rotation = 1.5708
scale = Vector2(2.5, 2.5)
script = ExtResource("1_ci73e")

[node name="Sprite_p2" type="Sprite2D" parent="."]
texture = ExtResource("2_67u87")
hframes = 12
vframes = 5

[node name="AnimationPlayer_p2" type="AnimationPlayer" parent="Sprite_p2"]
libraries = {
&"": SubResource("AnimationLibrary_67u87")
}

[node name="CollisionShape2D_p2" type="CollisionPolygon2D" parent="."]
position = Vector2(-4.908e-05, -1.39998)
scale = Vector2(1, 1)
polygon = PackedVector2Array(-15.1999, 8.20004, -15.2, 1.00004, -9.59996, 0.600016, -5.19997, -4.6, -3.99999, -10.2, -0.4, -12.2, 3.20001, -10.2, 4.80003, -4.20004, 10.4, 0.199944, 15.2, 0.599926, 15.2001, 8.59993, 7.60008, 9.79996, 2.80008, 10.6, 0.400095, 14.2, -3.59992, 10.2, -10.3999, 10.2)
